--- a/package.json
+++ b/package.json
@@ -13,6 +13,22 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/x-data-grid": "^7.7.1",
+    "@progress/kendo-date-math": "^1.5.13",
+    "@progress/kendo-drawing": "^1.20.1",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-react-animation": "^8.1.0",
+    "@progress/kendo-react-buttons": "^8.1.0",
+    "@progress/kendo-react-common": "^8.1.0",
+    "@progress/kendo-react-dateinputs": "^8.1.0",
+    "@progress/kendo-react-dialogs": "^8.1.0",
+    "@progress/kendo-react-dropdowns": "^8.1.0",
+    "@progress/kendo-react-form": "^8.1.0",
+    "@progress/kendo-react-inputs": "^8.1.0",
+    "@progress/kendo-react-intl": "^8.1.0",
+    "@progress/kendo-react-popup": "^8.1.0",
+    "@progress/kendo-react-scheduler": "^8.1.0",
+    "@progress/kendo-react-treeview": "^8.1.0",
+    "@progress/kendo-theme-default": "^8.0.1",
     "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
