--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-google-login": "^5.2.2",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
